apps/tailscale-ingress/kelos-console-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kelos-console-ts
  namespace: kelos-system
  labels:
    app.kubernetes.io/instance: tailscale-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kelos-console-server
      port:
        number: 80
